--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,6 +1,6 @@
 <%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
-<div class="subject show">
-  <h2>Show Subject</h2>
+<div class="student show">
+  <h2>Show Student Record</h2>
 
   <table summary="Student detail view">
     <tr>
