--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -15,9 +15,9 @@ a:hover { text-decoration: underline; }
 
 /* large action buttons */
 a.action { float: right; padding: 2px 5px; margin: 0 0 1em 1em; 
-  background: #94B26F; color: #4C2516;  border: 1px solid #4C2516;
+  background: #94BFAB; color: #4C2516;  border: 1px solid #4C2516;
   text-decoration: none; font-size: 0.8em; text-align: center; }
-a.action:hover { background: #B6D491; }
+a.action:hover { background: #B6DFAB; }
 
 /* small action buttons */
 .actions { width: 200px; }
@@ -30,8 +30,8 @@ a.action:hover { background: #B6D491; }
 .back-link { font-size: 0.8em; margin-bottom: 1em; }
 .form-buttons { text-align: center; margin: 1em 0; }
 
-.list table { clear: both; width: 100%; }
-.list table tr td { border: 1px solid #666666; }
+.list table { clear: both; width: 100%}
+.list table tr td { border: 1px solid #666666; text-align: center;}
 .show table { clear: both; margin: 0 200px; width: 300px; }
 .show table.wide { width: 600px; margin: 0 50px; }
 .show table tr th { white-space: nowrap; padding-right: 5px;}
