--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -11,7 +11,7 @@ light brown:  #4C2516
 
 html { height: 100%; width: 100%; }
 body { width: 100%; min-width: 980px; height: 100%; margin: 0; padding: 0; 
-  font: 14px Verdana,Lucida,Arial,Helvetica,sans-serif; color: #332318; }
+  font: 14px Verdana,Lucida,Arial,Helvetica,sans-serif; color: #33ABED; }
 p, td, ul, ol, li, dl, dt, dd { 
   font-family: Verdana,Lucida,Arial,Helvetica,sans-serif; }
 img { border: none; }
@@ -26,13 +26,13 @@ a:hover {}
 
 /* Structure */
 #header { height: 4em; padding-top: 1em; text-align: center; 
-  background: #993120; color: #FFFFFF; }
+  background: #4C2516; color: #FFFFFF; }
 #header h1 { margin: 0; padding: 0; }
-#main { min-height: 500px; background: #F2DC87; }
+#main { min-height: 500px; background: #FF00001; }
 #navigation { float: left; width: 180px; min-height: 480px; padding: 10px; 
   background: #94B26F; color: #4C2516; }
 #content { padding: 10px; }
-#footer { clear: both; height: 2.5em; text-align: right;
+#footer { clear: both; height: 7.5em; text-align: right;
   background: #4C2516; color: #F2DC87; }
 #footer p { margin: 0; padding: 0.5em 1em; }
 
