--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -24,6 +24,7 @@
     </div>
     <div id="footer">
       <p id="copyright">&copy; Scoolmitra.com</p>
+      <p > 'quietly brilliant'</p>
     </div>
   </body>
 </html>
