--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -10,7 +10,7 @@
       </tr>
       <tr>
         <th><%= f.label(:password) %></th>
-        <td><%= f.text_field(:password) %></td>>
+        <td><%= f.password_field(:password) %></td>>
       </tr>
       <tr>
         <th><%= f.label(:std) %></th>
