--- a/app/views/students/list.html.erb
+++ b/app/views/students/list.html.erb
@@ -1,16 +1,17 @@
+<%= link_to("<< Home", {:action => 'menu'}, :class =>'back-link') %>
 <% @page_title="student list" %>
-<div class="student list">
-  <h2>Students Record</h2>
+<div class="student list" align="center">
+  <h2>Admin Page</h2>
   
   <%= link_to("Add New Student", {:action => 'new'}, :class => 'action new') %>
 
   <table class="listing" summary="Student list">
-    <tr class="header">
+    <tr class="header" >
     
-      <th>Student_name</th>
-      <th>Username</th>
-      <th>Email id</th>
-      <th>Actions</th>
+      <th class="center">Student Name</th>
+      <th class="center">Username</th>
+      <th class="center">Email id</th>
+      <th class="center">Actions</th>
     </tr>
     <% @studs.each do |stud| %>
     <tr>
@@ -19,8 +20,8 @@
       <td class="center"><%= stud.email_id%></td>
       <td class="actions">
         <%= link_to("Show", {:action => 'show', :id => stud.id}, :class => 'action show') %>
-        <%= link_to("Edit", {:action=>'edit',:id=>stud.id}, :class => 'action edit') %>
-        <%= link_to("Delete", {:action=>'delete',:id=>stud.id}, :class => 'action delete') %>
+        <%= link_to("Edit", {:action=>'edit',:id => stud.id}, :class => 'action edit') %>
+        <%= link_to("Delete", {:action=>'delete',:id => stud.id}, :class => 'action delete') %>
       </td>
     </tr>
     <% end %>
