--- a/app/views/students/delete.html.erb
+++ b/app/views/students/delete.html.erb
@@ -4,7 +4,7 @@
 <div class="student delete">
   <h2>Delete Student</h2>
   
-  <%= form_for(:student, :url => {:action => 'destroy', :id => @stud.id}) do |f| -%>
+  <%= form_for(:stud, :url => {:action => 'destroy', :id => @stud.id}) do |f| -%>
 
     <p>Are you sure you want to permanently delete this subject?</p>
   
