--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -4,7 +4,7 @@
 <div class="student new">
   <h2>Create Student Record</h2>
 
-  <%= form_for(:student, :url => {:action => 'create'}) do |f| %>
+  <%= form_for(:stud, :url => {:action => 'create'}) do |f| %>
   
       <%= render(:partial => "form", :locals => {:f=>f}) %>
     
